webapp/src/tiles/chat/styles/_chat-message.scss
.chat__message {
  @include size(100%, auto);
  padding: 12px 20px;
  padding-bottom: 0;
  position: relative;

  a.link {
    text-decoration: underline;
  }

  a.link:hover {
    text-decoration: none;
  }

  &.extra-message {
    padding: 2px 20px;
  }

  &.extra-message:hover & {
    &--content:before {
      opacity: 1;
		}
  }

  &__info {
    @include size(100%, 12px);
    position: relative;
    padding-left: 50px;
    @include flex(center, flex-start);

    &--profile-img {
      @include size(30px, 30px);
      border-radius: 3px;
      position: absolute;
      left: 11px;
      top: 0;
      @include flex(center, center);

      img {
        @include size(30px, 30px);
        border-radius: inherit;
      }
    }

    &--author {
      font-size: 12px;
      font-weight: 700;
      color: $deepBlue-100;

      &:first-letter {
        text-transform: uppercase;
      }
    }

    &--timestamp {
      padding-left: 7px;
      font-size: 11px;
      font-weight: 500;
      // text-transform: uppercase;
      color: $deepBlue-40;
    }
  }

  &--content {
    padding: 0 50px;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: .4px;
    font-weight: 400;
    color: $deepBlue-100;
    position: relative;
    padding-top: 4px;

    .swipes-card {
      max-width: 400px;
      margin: 15px 0;

      .custom-html {
        iframe {
          width: 100%;
          margin-bottom: -2px;
        }
      }
    }

    &:before {
			content: attr(data-timestamp);
      @include size(auto, 100%);
			position: absolute;
      padding: 0 5px;
      left: -10px;
      top: 0;
			font-size: 10px;
			text-transform: uppercase;
			color: $blue-80;
      opacity: 0;
      @include flex(center, center);
		}

    &:after {
      content: "";
      @include size(1px, 80%);
      position: absolute;
      left: 45px; top: 15%;
      background-color: $deepBlue-40;
      opacity: 0;
    }

    &:hover {
      //background-color: darken($blue-5, 1%);

      &:after {
        opacity: 1;
      }
    }

    &--text {

      span {
        padding-right: 3px;

        &:empty {
          display: none;
        }
      }

      .emoji {
        @include size(15px !important, 15px !important);
        transform: translateY(-1px);
        vertical-align: middle;
      }

      a {
        color: $matBlue;
        cursor: pointer;
        text-decoration: underline;
      }
    }
  }
}

.dot {
  @include size(8px, 8px);
  left: calc(22px);
  position: absolute !important;
  top: 50%;
  transform: translateY(-50%) translateX(-50%);
}

a {
  cursor: default;

  &:hover > .unread-bar {
    background-color: $blue-120;
  }

  .unread-bar {
    @include size(100%, 30px);
    max-width: 650px;
    background-color: $blue-100;
    color: white;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    z-index: 999999;
    border-radius: 5px;
    @include flex(center, center);

    i.material-icons {
      padding: 0 8px;
      color: white !important;
      font-size: 16px !important;
    }

    &.read {
      display: none;
    }
  }
}

